--- a/01_Helloworld.vcxproj.filters
+++ b/01_Helloworld.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="helloworld.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="da.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
